# Emotional

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  file  tst.s
.clangd/index/: Application.cpp.52FB78F241FCA488.idx  Application.h.AC586750B78855E6.idx  Bus.cpp.81116DE98BC10F1B.idx  Bus.h.692EB0605776C694.idx  EmotionEngine.cpp.1BC64813B6E780E3.idx  EmotionEngine.h.57C5F101B17A7B44.idx  main.cpp.23E73B8405307609.idx  uint128.h.13CC3BB62661D780.idx
BIOS/: README.md  prime.cpp
BIOS/ee/kernel/: hw.h  kernel_start.c  reset.h  threading.c  threading.h  vif1.h
BIOS/iop/: btconf.c  btconf.h  iopboot.c  romdir.c  romdir.h  string.h  types.h
BIOS/iop/intrman/: global.h
BIOS/iop/loadcore/: global.h
BIOS/iop/sifcmd/: exports.c  global.h  sifcmd.c
BIOS/iop/sifman/: exports.c  global.h  sifman.c
logs/: dump_of_iop_ram  ee_console.txt  execution_log  human_strings_iop_ram  iop_console.txt
shaders/: frag.glsl  vert.glsl
src/: main.cpp
src/app/: Application.cpp  Application.h
src/app/opengl/: common.cpp  common.h  program.cpp  program.h  renderer.cpp  renderer.h  window.cpp  window.h
src/emu/: Bus.cpp  Bus.h  System.cpp  System.h  iopbus.h  sif.cpp  sif.h
src/emu/cpu/: EmotionEngine.cpp  EmotionEngine.h  cop0.cpp  instructions.cpp  opcode.h
src/emu/cpu/ee/: EEJit.cpp  EEJit.h  EmotionEngine.cpp  EmotionEngine.h  dmac.cpp  dmac.h  dmac.hpp  ee_interpret.cpp  ee_interpret.h  ee_opcode.cpp  opcode.h  timers.cpp  timers.h  vif.cpp  vif.h  vu.cpp  vu.h
src/emu/cpu/ee/x64/: EEJitX64_Aliases.inl  EEJitx64.cpp  EEJitx64.h  GuestRegister.h  RegAllocator.cpp  RegAllocator.h  emit.cpp  emit.h  reg_alloc.cpp  reg_alloc.h
src/emu/cpu/iop/: cpu.cpp  cpu.h  dma.cpp  dma.h  iop.cpp  iop.h  opcodes.cpp  sio2.cpp  sio2.h  timers.cpp  timers.h
src/emu/dev/: cdvd.cpp  cdvd.h  dvd.h  sif.cpp  sif.h  sio2.cpp  sio2.h
src/emu/gpu/: gif.cpp  gif.hpp  gs.cpp  gs.h  gs_types.h
src/emu/gs/: gif.cpp  gif.h  gs.cpp  gs.h
src/emu/memory/: Bus.cpp  Bus.h
src/emu/sched/: scheduler.cpp  scheduler.h
src/util/: uint128.h
util/: .gitignore  DMACMAN  EESYNC  LOADCORE  SIFMAN  cmddecoder  cmddecoder.cpp  dmatag.cpp  dmatagdumper  dump  romdumper  romdumper.cpp
util/romexplorer/: romexplorer  romexplorer.cpp
